--- a/client/src/app/ui/main/home/home.component.html
+++ b/client/src/app/ui/main/home/home.component.html
@@ -1,11 +1,19 @@
-<div *ngIf="account===null || account.isUserType">
-  <div *ngFor="let item of restaurants" class="restaurant-item">
-    <div>
-      <!-- todo add image -->
+<div *ngIf="account===null || account.isUserType" class="wrapper">
+  <div>
+    <p-autoComplete 
+     [(ngModel)]="text"
+     (completeMethod)="search($event)">
+    </p-autoComplete>
+  </div>
+  <div *ngFor="let item of restaurants" class="restaurant-item p-grid">
+    <div class="p-sm-12 p-md-3 restaurant-img">
+      <img src="assets/img/bckg.webp" alt="">
     </div>
-    <div style="display: flex;flex-direction: column;">
-      {{item.name}}
-      {{item.description}}
+    <div class="p-sm-12 p-md-9 restaurant-details">
+      <h3>{{item.name}}</h3>
+      <p>
+        {{item.description}}
+      </p>
     </div>
   </div>
 </div>
