--- a/client/src/app/ui/main/home/home.component.css
+++ b/client/src/app/ui/main/home/home.component.css
@@ -1,4 +1,39 @@
-.restaurant-item{
-  display: flex;
+.wrapper{
+  max-width: 1000px;
+  margin: 10px auto;
+  padding: 30px 10px 0px 10px;
+}
 
+.restaurant-item{
+  background-color: white;
+  padding: 15px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+.restaurant-item:hover{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.restaurant-img{
+  padding: 0px;
+  margin-bottom: 0px;
+}
+.restaurant-img img{
+   width: 100%;
+}
+
+.restaurant-details{
+  padding-left: 15px;
+  padding-right: 10px;
+  font-family: MRegular;
+  display: flex;
+  flex-direction: column;
+}
+.restaurant-details p{
+  margin-top: 20px;
+  font-family: MRegular;
+  color: #3e3e3e;
+}
+
+.search{
+  width: 100%;
 }
