--- a/client/src/app/ui/main/header/header.component.html
+++ b/client/src/app/ui/main/header/header.component.html
@@ -5,7 +5,9 @@
     <div>
       <ul>
         <li>
-          <span>Početna</span>
+          <a [routerLink]="['/home']">
+            <span>Početna</span>
+          </a>
         </li>
         <li>
           <span>Meni</span>
