--- a/client/src/app/ui/main/home/home.component.html
+++ b/client/src/app/ui/main/home/home.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="account===null || account.isUserType" class="wrapper">
   <div>
-    <p-autoComplete 
+    <p-autoComplete
      [(ngModel)]="text"
      (completeMethod)="search($event)">
     </p-autoComplete>
   </div>
-  <div *ngFor="let item of restaurants" class="restaurant-item p-grid">
+  <div *ngFor="let item of restaurants" class="restaurant-item p-grid" (click)="navigateToRestaurantPage(item.id)">
     <div class="p-sm-12 p-md-3 restaurant-img">
       <img src="assets/img/bckg.webp" alt="">
     </div>
