Admin components init.

--- a/client/src/app/ui/main/home/home.component.html
+++ b/client/src/app/ui/main/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="account===null || account.isUserType" class="wrapper">
+<div class="wrapper">
   <div>
     <p-autoComplete
      [(ngModel)]="text"
