add food image in model.

--- a/client/src/app/ui/admin/menues/menues.component.html
+++ b/client/src/app/ui/admin/menues/menues.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
-    <div class="p-d-flex p-jc-between p-ai-center p-mb-3">
-        <h3>Moj meni</h3>
+    <div class="p-d-flex p-jc-between p-ai-center p-my-3">
+        <h2>Moj meni</h2>
         <button class="btnn btnn-p ric"
          *ngIf="!addMenuFlag"
-         (click)="addMenuFlag = true"   
+         (click)="addMenuFlag = true"
          pRipple
         >
             <i class="fas fa-plus"></i>
