--- a/client/src/app/ui/authentication/authentication.component.css
+++ b/client/src/app/ui/authentication/authentication.component.css
@@ -1,6 +1,7 @@
 .wrapper{
   background: url('./../../../assets/img/bckg.webp') no-repeat center center/cover;
-  height: 100vh;
+    min-height: 100vh;
+    height: fit-content;
 }
 
 .wrapper > div {
@@ -11,9 +12,9 @@
 
 .wrapper > div /deep/ .wrapper{
   width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
+  padding-top: 28px;
+  padding-bottom: 28px;
+  min-height: 100vh;
 }
 
 .wrapper > div /deep/ .m_container{
@@ -24,7 +25,6 @@
   color: white;
   background-color: rgba(0, 0, 0, 0.514);
   padding: 40px 30px;
-  margin-bottom: 100px;
 }
 .wrapper > div /deep/ .m_container  h2 {
   color: #6eb9f7;
