--- a/client/src/app/ui/authentication/sign-up/sign-up.component.css
+++ b/client/src/app/ui/authentication/sign-up/sign-up.component.css
@@ -47,3 +47,11 @@
 .navigate:hover{
   color: var(--blue-300) !important;
 }
+
+
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+}
