--- a/client/src/app/ui/main/header/header.component.html
+++ b/client/src/app/ui/main/header/header.component.html
@@ -1,11 +1,12 @@
 <div class="header-wrapper">
-  <div class="header-container">
+  <div class="header-container" *ngIf="account.isUserType">
     <img src="assets/img/logo.png" alt="logo">
 
     <div>
       <ul>
         <li>
-          <a [routerLink]="['/home']">
+          <a [routerLink]="['/home']"
+          [routerLinkActive]="['is-active']">
             <span>Početna</span>
           </a>
         </li>
@@ -19,6 +20,54 @@
           </span>
         </li>
         <!--Samo za testestiranje-->
+
+        <p-avatar (click)="menu.toggle($event)"
+          *ngIf="account !== null"
+          [label]="acc_initials"
+          size="large"
+          shape="circle"
+          label="Show" >
+        </p-avatar>
+        <p-menu #menu [popup]="true" [model]="items"></p-menu>
+        <div>
+          <a *ngIf="account === null" [routerLink]="['/login/sign-in']"><i class="fas fa-sign-in-alt p-mr-2"></i>Prijavite se</a>
+        </div>
+      </ul>
+    </div>
+  </div>
+
+  <div class="header-container" *ngIf="!account.isUserType">
+    <div>
+      <ul>
+        <li>
+          <a routerLink="/admin/about" 
+          [routerLinkActive]="['is-active']">
+            <span>O nama</span>
+          </a>
+        </li>
+        <li>
+          <a routerLink="/admin/menues"
+          [routerLinkActive]="['is-active']">
+            <span>Meni</span>
+          </a>
+        </li>
+        <li>
+          <a routerLink="/admin/gallery"
+          [routerLinkActive]="['is-active']">
+            <span>Galerija</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div>
+      <ul>
+        <li>
+          <a routerLink="/admin/orders"
+          [routerLinkActive]="['is-active']">
+            <span>Moje narudžbine</span>
+          </a>
+        </li>
 
         <p-avatar (click)="menu.toggle($event)"
           *ngIf="account !== null"
