--- a/client/src/app/shared/menu-form/menu-form.component.html
+++ b/client/src/app/shared/menu-form/menu-form.component.html
@@ -1,43 +1,48 @@
-<div class="p-field p-m-0 top-container">
-    <label for="fieldId">Naziv menija</label>
-    <input id="fieldId" class="m-input p-mb-3" type="text" [(ngModel)]="menu.name">
-
-    <label>Jela na meniju</label>
-    <div class="p-d-flex p-flex-column p-my-2" 
-        *ngIf="menu.dishes.length > 0"
-    >
-        <div class="p-d-flex p-jc-between p-ai-center dish-item"
-         *ngFor="let dish of menu.dishes;let i = index">
-            {{dish.name}}
-            <span (click)="removeDish(i)">
-                <i class="far fa-times-circle"></i>
-            </span>
-        </div>
+<div class="p-grid p-m-0 top-container">
+    <div class="p-col-12 p-d-flex p-flex-column">
+        <label for="fieldId">Naziv menija</label>
+        <input id="fieldId"
+            class="m-input p-mb-1"
+            type="text"
+            [(ngModel)]="menu.name">
     </div>
-    <p-dropdown
-        *ngIf="allDishes.length > 0"
-        class="p-mt-1"
-        [options]="allDishes" 
-        placeholder="Dodaj jelo"
-        optionLabel="name"
-        [(ngModel)]="selectedDish"
-        (onChange)="onDishSelect()"
-        [showTransitionOptions]="'200ms'"
-        [hideTransitionOptions]="'200ms'">
-    </p-dropdown>
-    
-    <div *ngIf="allDishes.length == 0"
-        class="p-my-3 light-text bold-text"
-    >
-        Nemate više jela za dodavanje.
+    <div class="p-col-12 p-mb-2" style="padding: 0px 8px;">
+        <h4>Jelovnik</h4>
     </div>
 
-    <div class="p-d-flex p-flex-row-reverse p-mt-3">
+    <div class="p-col">
+        Auto
+    </div>
+
+    <div class="p-col-fixed p-d-flex p-flex-column pic">
+        
+        <img class="box"
+            src="{{menuFile === undefined ? 'assets/img/no-img.png' : newProductForm.get('picture').value}}"
+            alt="" >
+
+
+        <input 
+            style="display: none;background-color: red;"
+            type="file"
+            (change)="onFileSelect($event)"
+        #hiddenfileinput>
+
+        <button 
+            (click)="hiddenfileinput.click()"
+            class="btnn btnn-p ric p-mt-2"
+        >
+            <i class="fas fa-cloud-upload-alt"></i>
+            Izaberite sliku
+        </button>
+    </div>
+
+
+    <!-- <div class="col-sm-12 col-md-5 col-lg-5">
         <button class="btnn btnn-r x" pRipple (click)="onCancle()">
             <i class="fas fa-times"></i>
         </button>
         <button class="btnn btnn-g x p-mr-1" pRipple (click)="onConfirm()">
             <i class="fas fa-check"></i>
         </button>
-    </div>
+    </div> -->
 </div>
