[FRONT] Fix bad header display and startup bug.

--- a/client/src/app/shared/menu-form/menu-form.component.html
+++ b/client/src/app/shared/menu-form/menu-form.component.html
@@ -17,7 +17,7 @@
     <div class="p-col-fixed p-d-flex p-flex-column pic">
         
         <img class="box"
-            src="{{menuFile === undefined ? 'assets/img/no-img.png' : newProductForm.get('picture').value}}"
+            src="assets/img/no-img.png"
             alt="" >
 
 
