--- a/client/src/app/ui/admin/menues/menues.component.html
+++ b/client/src/app/ui/admin/menues/menues.component.html
@@ -13,8 +13,7 @@
 
     <!-- Forma za kreiranje menija -->
     <app-menu-form
-     *ngIf="addMenuFlag"
-     [myDishes]="dishes"
+     *ngIf="true"
      (menu)="updateMenues($event)">
     </app-menu-form>
 
