--- a/client/src/app/ui/main/header/header.component.css
+++ b/client/src/app/ui/main/header/header.component.css
@@ -55,7 +55,8 @@
 }
 
 .cart{
-  background-color: #01172fd8;
+  color: #b7d7fa;
+  background-color: #296eb8d8;
   padding: 6px 15px;
   border-radius: 7px;
 }
