--- a/client/src/app/shared/menu-form/menu-form.component.html
+++ b/client/src/app/shared/menu-form/menu-form.component.html
@@ -6,12 +6,19 @@
             type="text"
             [(ngModel)]="menu.name">
     </div>
-    <div class="p-col-12 p-mb-2" style="padding: 0px 8px;">
-        <h4>Jelovnik</h4>
-    </div>
 
     <div class="p-col">
-        Auto
+        <div class="p-d-flex p-jc-between p-ai-center">
+            <h4>Jela</h4>
+            <a class="p-mr-3" (click)="display = true">
+                <i class="fas fa-plus"></i>
+                Dodaj jelo
+            </a>
+        </div>
+        
+        <div class="p-mt-4 light-text">
+            Nemate dodato nijedno jelo.
+        </div>
     </div>
 
     <div class="p-col-fixed p-d-flex p-flex-column pic">
@@ -20,12 +27,10 @@
             src="assets/img/no-img.png"
             alt="" >
 
-
         <input 
-            style="display: none;background-color: red;"
+            style="display: none;"
             type="file"
-            (change)="onFileSelect($event)"
-        #hiddenfileinput>
+            (change)="onFileSelect($event)" #hiddenfileinput>
 
         <button 
             (click)="hiddenfileinput.click()"
@@ -46,3 +51,33 @@
         </button>
     </div> -->
 </div>
+
+<p-dialog
+  [breakpoints]="{'960px': '75vw', '640px': '100vw'}"
+  [style]="{width: '50vw'}"
+  position="top"
+  header="Napravi jelo"
+  [transitionOptions]="'0ms'"
+  [modal]="true"
+  [(visible)]="display">
+
+    <div class="p-grid">
+        <div class="p-col-12 p-d-flex p-flex-column">
+            <label for="fieldId">Naziv jela</label>
+            <input id="fieldId"
+                class="m-input p-mb-1"
+                type="text"
+                [(ngModel)]="mDish.name">
+        </div>
+        <div class="p-col-12 p-d-flex p-flex-column">
+            <label for="fieldId">Sastojci</label>
+            <textarea id="fieldId"
+                class="m-textarea p-mb-1"
+                [(ngModel)]="mDish.ingredients_list">
+            </textarea>
+        </div>
+
+    </div>
+
+
+</p-dialog>
